# simple-image-editor

./: .gitignore  .vscodeignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  design.pen  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.webview.json  vitest.config.ts  vitest.config.webview.ts  webpack.config.js
docs/: AGENTS.md  ARCHITECTURE.md  SPEC.md
l10n/: bundle.l10n.ja.json  bundle.l10n.ko.json  bundle.l10n.zh-cn.json
src/engine/: Cargo.toml
src/engine/src/: brush.rs  canvas.rs  clipboard.rs  filters.rs  history.rs  image_io.rs  layers.rs  lib.rs  selection.rs  text.rs
src/engine/tests/: brush_tests.rs  canvas_tests.rs  clipboard_tests.rs  filters_tests.rs  history_tests.rs  image_io_tests.rs  layers_tests.rs
src/extension/: aiService.ts  commands.ts  extension.ts  imageDocument.ts  imageEditorProvider.ts  protocol.ts
src/extension/__tests__/: aiService.test.ts  commands.test.ts  imageDocument.test.ts  imageEditorProvider.test.ts
src/webview/: App.tsx  i18n.ts  index.tsx  test-setup.ts  vscode.ts
src/webview/__tests__/: App.test.tsx
src/webview/components/: AIPanel.tsx  AISettingsDialog.tsx  BuyMeACoffee.tsx  Canvas.tsx  ContextMenu.tsx  EditorMode.tsx  FillDialog.tsx  FilterDialog.tsx  FilterMenu.tsx  FormatDialog.tsx  HistoryPanel.tsx  LayerPanel.tsx  Minimap.tsx  ModeSegment.tsx  PropertyPanel.tsx  SidebarTabs.tsx  StrokeDialog.tsx  TextInputDialog.tsx  TextInputOverlay.tsx  TextOptionsBar.tsx  Toolbar.tsx  ViewerMode.tsx  ZoomControls.tsx
src/webview/engine/: engineContext.ts  helpers.ts  loadWasm.ts  marchingSquares.ts  openraster.ts  (+3 more)
(+49 files in other folders)
